fix: Vertical scrollbar in data browser is outside visible area when scrolling horizontally (#2457)

--- a/src/components/DataBrowserHeaderBar/DataBrowserHeaderBar.scss
+++ b/src/components/DataBrowserHeaderBar/DataBrowserHeaderBar.scss
@@ -8,7 +8,7 @@
 @import 'stylesheets/globals.scss';
 
 .bar {
-  position: absolute;
+  position: sticky;
   top: 0;
   left: 0;
   height: 30px;
